--- a/app/views/movie_templates/list.html.erb
+++ b/app/views/movie_templates/list.html.erb
@@ -11,21 +11,25 @@
     <th></th>
   </tr>
 
-  <% Movie.all.each do |a_movie| %>
 
+
+<% Movie.all.each do |a_movie| %>
   <tr>
     <td><%= a_movie.id %></td>
     <td>
-      <img src="<%= a_movie.image %>" width="100">
+      <img src="<%= a_movie.image %>" width="200">
     </td>
     <td><%= a_movie.title %></td>
     <td><%= a_movie.year %></td>
-    <td><%= a_movie.director %></td>
-    <td>Show details</td>
+    <td>
+      <% matching_records = Director.where({ :id => a_movie.director_id}) %>
+      <% the_director = matching_records.at(0) %>
+
+      <%= the_director.name %>
+    </td>
+    <td>
+      <a href="/movies/<%= a_movie.id %>">Show details</a>
+    </td>
   </tr>
-
-  <% end %>
-
-</table>
-
+<% end %>
 </table>
